Revision history for Log-Abstraction

0.08
	Use Config::Abstraction instead of Config::Auto

0.07	Mon Mar 24 08:36:01 EDT 2025
	Handle "Socket operation on non-socket" on Solaris
	Calling new on an object now returns a clone rather than setting the defaults in the new object

0.06	Wed Mar 12 13:23:24 EDT 2025
	Don't put spaces between elements of an array

0.05	Tue Mar 11 14:10:10 EDT 2025
	Handle being passed a reference to an array

0.04	Mon Mar 10 09:39:46 EDT 2025
	Renamed from Log-YetAnother to Log-Abstraction
	Added config_file argument to new()

0.03	Sat Mar  8 08:40:00 EST 2025
	Fix passing an array to warn()

0.02	Thu Mar  6 17:09:32 EST 2025
	Improved argument checking to new()

0.01	Thu Mar  6 15:42:04 EST 2025
        First draft