@@ -2,6 +2,7 @@ Revision history for Log-Abstraction
 
 0.08
 	Use Config::Abstraction instead of Config::Auto
+	Guess the value if script_name if it's not given
 
 0.07	Mon Mar 24 08:36:01 EDT 2025
 	Handle "Socket operation on non-socket" on Solaris
